Create FileBackedTaskManager class and its test class and resources for them